# holbertonschool-hbnb

./: .gitignore
part1/: Documentation Compilation.md  High-Level Package Diagram.md  README.md  Update uml-sequence-diagrams.md  class_diagram.md
part2/: README.md  SECURITY_SUMMARY.md  config.py  requirements.txt  run.py  test_api.sh  test_auth.sh  test_models.py
part2/app/: __init__.py
part2/app/api/v1/: __init__.py  amenities.py  auth.py  places.py  reviews.py  users.py
part2/app/models/: amenity.py  base.py  place.py  review.py  user.py
part2/app/persistence/: repository.py
part2/app/services/: facade.py
part2/app/utils/: auth.py
part3/: .gitignore  .poetry-install.md  API_TESTING.md  DATABASE_DIAGRAM.md  JWT_IMPLEMENTATION.md  PASSWORD_HASHING_IMPLEMENTATION.md  README.md  SQL_SCRIPTS_README.md  TESTING.md  TESTING_REPORT.md  config.py  pyproject.toml  requirements.txt  reset_db.py  run.py  schema.sql  setup_database.sh  test_api.ps1  test_api.py  test_models.py  test_password_hashing.py  test_queries.sql  verify_password_hashing.py
part3/app/: __init__.py  config.py  extensions.py  init.py
part3/app/api/v1/: __init__.py  amenities.py  auth.py  init.py  places.py  reviews.py  users.py
part3/app/api/v1/views/: __init__.py
part3/app/models/: amenity.py  base.py  place.py  review.py  user.py
part3/app/persistence/: repository.py
part3/app/services/: __init__.py  facade.py
part3/diagrams/: README.md  er_diagram_simple.md  sqlalchemy_relationships.md
part3/sql/: SQL_SCRIPTS_README.md  generate_password_hash.py  seed_data.sql
part4/: HOW_TO_RUN.txt  LIVE_TEST_RESULTS.md  PART4_CHECK.md  PROJECT_README.md  PUSH_COMMANDS.txt  README.md  TESTING_SUMMARY.md  add_review.html  index.html  login.html  place.html  push_each_file.ps1  register.html  scripts.js  server.py  styles.css
part4/images/: .gitkeep  README.md
