[tool.poetry]
name = "hbnb-part3"
version = "1.0.0"
description = "HBnB Evolution - Part 3: Enhanced Backend with Authentication and Database Integration"
authors = ["Faisal Alazmi <faisal@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/faisal-Alazmi/holbertonschool-hbnb"
keywords = ["flask", "rest-api", "jwt", "sqlalchemy", "authentication"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.0"
Flask-RESTX = "^1.3.0"
Flask-JWT-Extended = "^4.6.0"
Flask-Bcrypt = "^1.0.1"
SQLAlchemy = "^2.0.0"
Flask-SQLAlchemy = "^3.1.0"
bcrypt = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
coverage = "^7.4.0"

[tool.poetry.scripts]
start = "run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
